Another try and corrections in the scrollbar

--- a/css/_generales.scss
+++ b/css/_generales.scss
@@ -4,19 +4,9 @@
   width: 10px;
   height: 90%;
   background: #3f5e60;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
 }
 ::-webkit-scrollbar-track {
   background: $scrollGradient;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
 }
 ::-webkit-scrollbar-thumb {
   background: #cfcfcf;
@@ -36,7 +26,7 @@
 }
 
 html {
-  background: $bgGradient no-repeat center center fixed;
+  background: $bgGradient no-repeat fixed;
 }
 
 body {
@@ -45,7 +35,6 @@ body {
   flex-direction: column;
   justify-content: space-between;
   font-family: 'Righteous', cursive;
-  // background: $bgGradient no-repeat center center fixed;
   font-size: 16px;
   font-weight: 100;
 }
